array.island.Island.scala.error
Compilation error:
Island:4: error: identifier expected but ']' found.
  for (i <- 0 to (num[].length()-1)) {
                      ^Island:10: error: ']' expected but '}' found.
} 
^